--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h3>What is the capital of India?</h3>
+	<input type="radio" >New Delhi 
+	<br>
+	<input type="radio">Mumbai
+
+	<blockquote>New Delhi is the capital of India and an administrative district of NCVT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
