--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<br>
 	<input type="radio">Mumbai
 
-	<blockquote>New Delhi is the capital of India and an administrative district of NCVT Delhi.</blockquote>
+	<blockquote>New Delhi is the capital of India and an administrative district of NCVT Delhi</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
