--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h3>What is the capital of India?</h3>
-	<input type="radio" >New Delhi 
+	<input type="radio" name="capital">New Delhi 
 	<br>
-	<input type="radio">Mumbai
+	<input type="radio" name="capital">Mumbai
 
-	<blockquote>New Delhi is the capital of India and an administrative district of NCVT Delhi</blockquote>
+	<blockquote cite="New Delhi">New Delhi is the capital of India and an administrative district of NCVT Delhi</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
