--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<br>
 	<input type="radio" name="capital">Mumbai
 
-	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCVT Delhi</blockquote>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
